--- a/src/input.css
+++ b/src/input.css
@@ -73,8 +73,9 @@
         @apply origin-center -translate-y-[.7rem] rotate-[-50deg] transition-all bg-light w-[1.5rem];
     }
 
+
     .header__nav{
-        @apply bg-light lg:bg-transparent absolute flex flex-col  left-0 w-[100%] top-[9rem] overflow-hidden max-h-[0] text-center lg:relative lg:overflow-visible lg:h-[100%] lg:flex-row-reverse lg:items-center lg:justify-between lg:w-full lg:max-w-[70rem] lg:mx-auto lg:left-0  transition-[.5s] z-[999];
+        @apply bg-light lg:bg-transparent absolute flex flex-col  left-0 w-[100%] top-[9rem] overflow-hidden max-h-[0] text-center lg:relative lg:overflow-visible lg:h-[100%] lg:flex-row-reverse lg:items-center lg:justify-between lg:w-full lg:max-w-[70rem] lg:mx-auto lg:left-0  transition-[.5s] z-[999] ;
     }
     .header__nav ul{
         @apply lg:flex transition-all ;
@@ -83,7 +84,7 @@
         @apply  my-1 lg:my-0 lg:border-t-4 lg:border-transparent lg:hover:border-primary transition-all;
     }
     .header__nav ul li a{
-        @apply  lg:text-white  transition-all border-b-2 border-gray-400;
+        @apply text-[.9rem] lg:text-white  transition-all border-b-2 border-gray-400;
     }
     
     .header__nav ul li a{
@@ -96,7 +97,7 @@
         @apply lg:border-primary;
     }
     .header__nav ul li a{
-        @apply flex items-center justify-between p-4;
+        @apply flex items-center justify-between p-3;
     }
     .header__nav ul li a i{
         @apply lg:hidden;
@@ -105,26 +106,14 @@
         @apply transition ease-linear duration-300;
     }
 
-    /* .header__nav i.open{
-        @apply hover:text-red-300 ;
-    } */
     .header__nav.open{
         @apply duration-500 top-[9rem] left-0 max-h-max transition-all lg:top-0;
     }
     .dropdown{
         @apply max-h-0 bg-white overflow-hidden transition-all lg:absolute lg:top-[6rem] lg:overflow-hidden lg:opacity-0 lg:max-h-0 lg:text-dark lg:flex duration-500 z-[999];
     }
-    .dropdown__item{
-        @apply lg:mx-[1rem] ;
-    }
-    .dropdown h4{
-        @apply text-[2rem] text-left text-[#50ba87] mx-3 border-b-2 lg:border-transparent;
-    }
     .dropdown ul{
         @apply flex-col m-3;
-    }
-    .dropdown ul li{
-        @apply lg:border-t-0 ;
     }
     .dropdown ul li a{
         @apply h-[1rem] lg:text-dark lg:hover:bg-transparent lg:translate-x-1 lg:hover:translate-x-0 lg:hover:text-dark lg:border-transparent lg:border-l-4 lg:hover:border-primary;
@@ -138,14 +127,14 @@
     .header__nav__icons a{
         @apply text-[1.5rem] hover:text-primary lg:text-white transition-all duration-500 mx-1;
     }
-    .header__nav__container{
-        @apply lg:bg-dark;
-    }
-    .header__nav ul li:last-child .dropdown{
-        @apply lg:left-0;
-    }
-    .header__nav ul li:last-child .dropdown ul{
-        @apply lg:grid lg:grid-cols-2 lg:border-r-2 lg:px-5 lg:w-[30rem];
-    }
+
+    /* .head{
+        @apply sm:hidden lg:flex 
+    } 
+    .head__nav ul{
+        @apply flex
+    } */
+
+    
 
 }
